--- a/package.json
+++ b/package.json
@@ -7,23 +7,29 @@
     "start": "node ./dist/server.js",
     "build": "tsc --project ./",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc --watch"
+    "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/morgan": "^1.9.3",
+    "@types/mysql": "^2.15.21",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "express-validator": "^6.14.2",
     "morgan": "^1.10.0",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.3.3",
     "winston": "^3.8.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/mysql2": "github:types/mysql2",
     "@types/node": "^18.0.0",
     "ts-node": "^10.8.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
   }
 }
