--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node ./dist/server.js",
     "build": "tsc --project ./",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
+    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
+    "lint-f": "eslint --ignore-path .eslintignore --ext .js,.ts . --fix"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +30,9 @@
     "@types/express": "^4.17.13",
     "@types/mysql2": "github:types/mysql2",
     "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
+    "eslint": "^8.18.0",
     "ts-node": "^10.8.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
