--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "build": "tsc --project ./",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
-    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
-    "lint-f": "eslint --ignore-path .eslintignore --ext .js,.ts . --fix"
+    "lint": "eslint src/ .",
+    "lint-f": "eslint src/ . --fix",
+    "pretty": "prettier --check src/",
+    "pretty-f": "prettier --write src/"
   },
   "keywords": [],
   "author": "",
@@ -33,6 +35,7 @@
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "eslint": "^8.18.0",
+    "prettier": "^2.7.1",
     "ts-node": "^10.8.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
