--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "morgan": "^1.10.0",
+    "uuid": "^8.3.2",
     "winston": "^3.8.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "eslint": "^8.18.0",
