--- a/package.json
+++ b/package.json
@@ -19,16 +19,20 @@
   "dependencies": {
     "@prisma/client": "^4.1.0",
     "@types/morgan": "^1.9.3",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "uuid": "^8.3.2",
     "winston": "^3.8.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.0.0",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
