--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.1.0",
-    "@types/morgan": "^1.9.3",
+    "@vendia/serverless-express": "^4.10.1",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
@@ -29,10 +29,12 @@
     "winston": "^3.8.0"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.108",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.0",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
